# bridgr

./: .env.example  RUN_LOCAL_AND_DEPLOY.md  docker-compose.yml  eslint.config.js  lighthouse-report.json  package.json  tsconfig.app.json  vite.config.ts
backend/: .env.docker  .env.example  AUTH_IMPLEMENTATION.md  DELIVERABLES.md  Dockerfile  FILES_MODIFIED.md  IMPLEMENTATION_SUMMARY.md  Procfile  QUICK_START.md  README.md  README_AUTH.md  SECURITY_ARCHITECTURE.md  alembic.ini  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_auth_fields.py  002_complete_mvp_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  (+9 more)
backend/app/core/: config.py  errors.py  permissions.py  security.py
backend/app/db/: base.py  enums.py  session.py
backend/app/repositories/: application_repo.py  audit_repo.py  base.py  client_repo.py  job_repo.py  notification_repo.py  payment_repo.py  project_repo.py  user_repo.py  worker_repo.py
backend/app/schemas/: admin.py  application.py  audit_log.py  auth.py  client.py  job.py  message.py  notification.py  payment.py  project.py  user.py  worker.py
backend/app/scripts/: create_admin.py  seed.py
backend/app/services/: admin_service.py  audit_service.py  auth_service.py  client_service.py  email_templates.py  job_service.py  payment_service.py  project_service.py  upload_service.py  worker_service.py
backend/app/utils/: money.py  pagination.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_privacy.py  test_role_protection.py
(+166 files in other folders)
